--- a/user-activation/app.css
+++ b/user-activation/app.css
@@ -270,6 +270,10 @@
   color: white;
 }
 
+.reviews {
+  margin-bottom: 2rem;
+}
+
 .reviews .review .user-info .avatar {
   margin-right: 1rem;
 }
@@ -356,19 +360,8 @@
   margin-bottom: 0;
 }
 
-.reviews .review.review-ease-in {
-  -ms-animation-duration: .3s;
-  -moz-animation-duration: .3s;
-  -webkit-animation-duration: .3s;
-  animation-duration: .3s;
-  -ms-animation-name: fadeIn;
-  -moz-animation-name: fadeIn;
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  -ms-transition-duration: .3s;
-  -moz-transition-duration: .3s;
-  -webkit-transition-duration: .3s;
-  transition-duration: .3s;
+.reviews .review:last-of-type .text {
+  margin-bottom: 1rem;
 }
 
 .reviews .read-more {
@@ -388,20 +381,6 @@
   -moz-transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    filter: alpha(opacity=0);
-  }
-
-  to {
-    opacity: 1;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    filter: alpha(opacity=100);
-  }
 }
 
 .message-modal textarea {
@@ -1142,6 +1121,21 @@
   padding: 20px;
 }
 
+.user-activation.mobile .user-activation-content.modal-header.with-image.rewards-sign-up h3,
+.user-activation.mobile .user-activation-content form.modal-header.with-image.rewards-sign-up h3 {
+  color: white;
+}
+
+.user-activation.mobile .user-activation-content,
+.user-activation.mobile .user-activation-content form {
+  height: 100%;
+  display: flex;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .user-activation.mobile .avatar.with-cam::after {
   right: -0.1rem;
   bottom: -0.1rem;
@@ -1150,6 +1144,10 @@
 .user-activation.mobile .avatar {
   width: 96px;
   padding-top: 96px;
+}
+
+.user-activation.mobile {
+  height: 100%;
 }
 
 .user-activation.personal-data-modal .header-image,
@@ -1443,7 +1441,13 @@
 }
 
 .profile-created {
+  height: 100%;
+  display: flex;
   text-align: center;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
 .profile-created > img {
@@ -1591,10 +1595,15 @@
 .mobile-modal-light .modal-content {
   overflow: auto;
   border: 0;
+  display: flex;
   -ms-flex: auto 1 1;
   -moz-flex: auto 1 1;
   -webkit-flex: auto 1 1;
   flex: auto 1 1;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
 .mobile-modal-light .modal-spacer {
@@ -1605,6 +1614,10 @@
   flex-grow: 1;
 }
 
+.mobile-modal-light .actions {
+  margin-top: auto;
+}
+
 .mobile-modal-light .modal-header.image-only {
   width: 100%;
   max-height: 175px;
@@ -1612,6 +1625,8 @@
 
 .mobile-modal-light .modal-header.with-image {
   height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .mobile-modal-light .modal-header .modal-action-button.back-button {
@@ -3531,6 +3546,26 @@ footer .copyright {
   background-size: 4rem;
 }
 
+.attestation-modal.kakao > div h2::before {
+  background-image: url(images/identity/kakao-icon-large-dark.svg);
+  background-size: 4rem;
+}
+
+.attestation-modal.github > div h2::before {
+  background-image: url(images/identity/github-icon-large-dark.svg);
+  background-size: 4rem;
+}
+
+.attestation-modal.linkedin > div h2::before {
+  background-image: url(images/identity/linkedin-icon-large-dark.svg);
+  background-size: 4rem;
+}
+
+.attestation-modal.wechat > div h2::before {
+  background-image: url(images/identity/wechat-icon-large-dark.svg);
+  background-size: 4rem;
+}
+
 .attestation-modal.success > div h2::before {
   background-image: none;
 }
@@ -4081,6 +4116,47 @@ footer .copyright {
   margin-top: 2rem;
 }
 
+.attestations {
+  display: flex;
+}
+
+.attestation {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.25rem;
+}
+
+.attestation.email {
+  background-image: url(images/identity/email-icon-verified.svg);
+}
+
+.attestation.facebook {
+  background-image: url(images/identity/facebook-icon-verified.svg);
+}
+
+.attestation.phone {
+  background-image: url(images/identity/phone-icon-verified.svg);
+}
+
+.attestation.twitter {
+  background-image: url(images/identity/twitter-icon-verified.svg);
+}
+
+.attestation.airbnb {
+  background-image: url(images/identity/airbnb-icon-verified.svg);
+}
+
+.attestation.google {
+  background-image: url(images/identity/google-icon-verified.svg);
+}
+
+.attestation.website {
+  background-image: url(images/identity/website-icon-verified.svg);
+}
+
 @media (max-width: 767.98px) {
   .user-profile .avatar-wrap {
     max-width: 8rem;
@@ -4511,6 +4587,26 @@ footer .copyright {
 
 .profile-attestations .profile-attestation.website > i::before {
   background-image: url(images/identity/website-icon-light.svg);
+  background-size: 1rem;
+}
+
+.profile-attestations .profile-attestation.kakao > i::before {
+  background-image: url(images/identity/kakao-icon-large.svg);
+  background-size: 1rem;
+}
+
+.profile-attestations .profile-attestation.github > i::before {
+  background-image: url(images/identity/github-icon-large.svg);
+  background-size: 1rem;
+}
+
+.profile-attestations .profile-attestation.linkedin > i::before {
+  background-image: url(images/identity/linkedin-icon-large.svg);
+  background-size: 1rem;
+}
+
+.profile-attestations .profile-attestation.wechat > i::before {
+  background-image: url(images/identity/wechat-icon-large.svg);
   background-size: 1rem;
 }
 
@@ -5777,6 +5873,16 @@ footer .copyright {
   background-color: #2196F3;
 }
 
+.growth-enrollment-modal.modal-content > div,
+.growth-enrollment-modal.modal-content .internal-modal-content {
+  height: 100%;
+  display: flex;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .growth-enrollment-modal.modal-content .btn {
   width: 100%;
   margin: 2rem 0;
@@ -5819,7 +5925,7 @@ footer .copyright {
 
 .growth-enrollment-modal .image-holder {
   position: relative;
-  width: 400px;
+  height: 150px;
 }
 
 .growth-enrollment-modal .info-text {
@@ -8934,48 +9040,6 @@ svg.help-icon:hover path {
   display: block;
   font-weight: bold;
   color: var(--dark);
-}
-
-@-ms-keyframes fadeIn {
-  from {
-    opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    filter: alpha(opacity=0);
-  }
-
-  to {
-    opacity: 1;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    filter: alpha(opacity=100);
-  }
-}
-
-@-moz-keyframes fadeIn {
-  from {
-    opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    filter: alpha(opacity=0);
-  }
-
-  to {
-    opacity: 1;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    filter: alpha(opacity=100);
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    filter: alpha(opacity=0);
-  }
-
-  to {
-    opacity: 1;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    filter: alpha(opacity=100);
-  }
 }
 
 @-ms-keyframes spin {
