--- a/user-activation/app.css
+++ b/user-activation/app.css
@@ -1573,6 +1573,7 @@
   bottom: 0;
   background-color: white;
   display: flex;
+  overflow: auto;
   -ms-flex-direction: column;
   -moz-flex-direction: column;
   -webkit-flex-direction: column;
@@ -1593,7 +1594,7 @@
 }
 
 .mobile-modal-light .modal-content {
-  overflow: auto;
+  min-height: min-content;
   border: 0;
   display: flex;
   -ms-flex: auto 1 1;
