--- a/shah/app.css
+++ b/shah/app.css
@@ -6907,7 +6907,7 @@ body.has-profile-page {
   padding: 0px;
 }
 
-.mobile-modal-light .modal-content {
+.mobile-modal-light .modal-content.growth-enrollment-modal {
   background-color: var(--pale-grey-four);
   padding: 0px;
   border-radius: 0px;
